--- a/style.css
+++ b/style.css
@@ -13,6 +13,7 @@ a {
     background: #f7f7f7;
     position: fixed;
     width: 240px;
+    height: 100%;
 }
 
 .home-side-bar #img-logo {
@@ -72,3 +73,241 @@ a {
     width: 41px !important;
     height: 41px !important;
 }
+
+.home-menu-transparant-progress {
+    background: transparent;
+    border-radius: 12px;
+    color: black;
+    font-weight: bolder;
+    margin-top: 15px !important;
+}
+
+.home-menu-transparant progress {
+    color: #4D80E4;
+    background: #4D80E4;
+    margin-top: 15px;
+    margin-left: 10px;
+    margin-right: 10px;
+    border-radius: 50%;
+    height: 20px !important;
+}
+
+.home-menu-transparant-progress-active {
+    background: transparent;
+    border-radius: 12px;
+    padding: 5px 5px;
+    color: black;
+    border: 2px solid #4D80E4;
+    font-weight: bolder;
+    height: 35px;
+    width: 40px;
+    margin-top: 8px !important;
+}
+
+progress::-webkit-progress-value { background: #4D80E4; border-radius: 20px;}
+progress::-webkit-progress-bar { background: #e5e5e5;border-radius: 20px; }
+
+.contact-us {
+    position: absolute;
+    bottom: 0;
+    padding: 22px;
+}
+
+.contact-us .item {
+    font-size: 12px;
+    margin: 10px 0;
+}
+
+.contact-us .item img {
+    width: 26px;
+    height: 26px;
+    margin-right: 10px;
+}
+
+.contact-us h5 {
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    color: #5F5A5A;
+}
+
+.contact-us span {
+    font-size: 11px;
+    color: #B9B8B8;
+    width: 100%;
+}
+
+.header {
+    position: fixed;
+    left: 240px;
+    top: 0px;
+    width: 100%;
+}
+
+.blue-separator-line {
+    background: #4D80E4;
+    height: 2px;
+}
+
+.header h1 {
+    margin-top: 25px;
+    margin-left: 25px;
+    font-weight: bolder;
+}
+
+.header .welcome {
+    margin-top: 5px;
+    margin-left: 25px;
+    color: #707070;
+    margin-bottom: 14px;
+}
+
+.header .search-bar {
+    height: 33px;
+    background: #F7F7F7;
+    width: 40%;
+    border-radius: 16.5px;
+    margin-top: 28px;
+    margin-left: 30px;
+}
+
+.header-top {
+    display: flex;
+}
+
+.header-top .search-bar {
+    display: flex;
+    justify-content: space-between;
+    padding: 6px 10px;
+    color: #b3b3b3;
+}
+
+.search-bar img {
+    justify-content: right;
+    justify-items: right;
+    align-content: flex-end;
+}
+
+.switch {
+    margin-top: 28px;
+    margin-left: 20px;
+}
+
+.header h5 {
+    color: #A0A0A0;
+    margin-top: 31px;
+    margin-left: 10px;
+}
+
+.notification {
+    width: 36px;
+    height: 36px;
+    background: #F7F7F7;
+    border-radius: 8px;
+    margin-top: 27px;
+    margin-left: 100px;
+}
+
+.notification img {
+    margin: 0 auto;
+    height: 24px !important;
+    width: 24px !important;
+    margin-left: 6px;
+    margin-top: 6px;
+}
+
+.profile-submenu {
+    position: fixed;
+    width: 244px;
+    top: 126px;
+    left: 240px;
+    height: 100%;
+    border: 1px solid #DEDEDE;
+}
+
+.submenu {
+    width: 100%;
+    height: 79px;
+    padding-top: 30px;
+    padding-left: 15px;
+}
+
+.submenu img {
+    width: 26px !important;
+    height: 26px !important;
+    margin-right: 10px;
+}
+
+.submenu span {
+    color: #6b6b6b;
+    font-size: 16px;
+}
+
+.submenu .active {
+    font-weight: bolder;
+}
+
+.profile-submenu hr {
+    margin: 0px !important;
+}
+
+/*Toggler*/
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #4D80E4;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #4D80E4;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #4D80E4;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
