--- a/home-style.css
+++ b/home-style.css
@@ -87,3 +87,34 @@
 
     color: #B0AAAA !important;
 }
+
+.status {
+    font-style: normal;
+    font-weight: normal;
+    font-size: 20px;
+    line-height: 24px;
+
+    color: #000000;
+}
+
+.paragraph progress {
+    color: #4d80e4;
+    background: #4d80e4;
+    border-radius: 50%;
+    width: 100%;
+    height: 10px !important;
+}
+
+progress::-webkit-progress-value {
+    background: #4d80e4;
+    border-radius: 20px;
+}
+progress::-webkit-progress-bar {
+    background: #e5e5e5;
+    border-radius: 20px;
+}
+
+.status {
+    display: flex;
+    justify-content: space-between;
+}
