--- a/CSS/detail-style.css
+++ b/CSS/detail-style.css
@@ -158,3 +158,28 @@ progress::-webkit-progress-bar {
     padding: 10px 46px;
     font-weight: bold;
 }
+
+.bukti-pengiriman {
+    border: 1px solid #C5C5C5;
+    box-sizing: border-box;
+    margin: 20px;
+    padding: 10px;
+}
+
+.bukti-pengiriman p {
+    color: #8F8F8F;
+    font-size: 18px;
+}
+
+.bukti-pengiriman button {
+    background: #4D80E4;
+    color: white;
+    font-weight: bolder;
+    width: 100%;
+    text-align: center;
+    box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 6px;
+    outline: none;
+    border: none;
+    padding: 8px 0px;
+}
