--- a/CSS/notification-style.css
+++ b/CSS/notification-style.css
@@ -1,114 +1,112 @@
 .notif-setting {
-    display: flex;
-    padding: 10px;
-    color: black;
-    justify-content: space-between;
+  display: flex;
+  padding: 10px;
+  color: black;
+  justify-content: space-between;
 }
 
 .content .switch {
-    margin-top: 0px !important;
+  margin-top: 0px !important;
 }
 
 .content hr {
-    margin: 0px !important;
+  margin: 0px !important;
 }
 
 .content .switch {
-    position: relative;
-    display: inline-block;
-    width: 60px;
-    height: 34px;
-  }
-  
-  .content .switch input { 
-    opacity: 0;
-    width: 0;
-    height: 0;
-  }
-  
-  .content .slider {
-    position: absolute;
-    cursor: pointer;
-    top: 0;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-    border: 1px solid #4D80E4;
-  }
-  
-  .content  .slider:before {
-    position: absolute;
-    content: "";
-    height: 26px;
-    width: 26px;
-    left: 4px;
-    bottom: 4px;
-    background-color: white;
-    -webkit-transition: .4s;
-    transition: .4s;
-  }
-  
-  .content input:checked + .slider {
-    background-color: #4D80E4;
-  }
-  
-  .content input:focus + .slider {
-    box-shadow: 0 0 1px #4D80E4;
-  }
-  
-  .content input:checked + .slider:before {
-    -webkit-transform: translateX(26px);
-    -ms-transform: translateX(26px);
-    transform: translateX(26px);
-  }
-  
-  /* Rounded sliders */
-  .content .slider.round {
-    border-radius: 34px;
-  }
-  
-  .content .slider.round:before {
-    border-radius: 50%;
-  }
-
-  .notification-item-unread {
-    display: flex;
-    background-color: #EFEFEF;
-    padding: 10px;
-    justify-content: space-between;
-  }
-
-  .notification-item-read {
-    display: flex;
-    background-color: #f9f9f9;
-    padding: 10px;
-    justify-content: space-between;
-  }
-
-
-  .left-side {
-
-  }
-
-  .paragraph-side p {
-    font-size: 14px;
-    color: #7E7E7E;
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
 }
 
-  .left-side img {
-    width: 64px !important;
-    height: 64px !important;
-    margin-left: 40px;
-  }
+.content .switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
 
-  /* Modal */
+.content .slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: white;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+  border: 1px solid #4d80e4;
+}
+
+.content .slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: #4d80e4;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
+}
+
+.content input:checked + .slider {
+  background-color: #4d80e4;
+}
+
+.content input:focus + .slider {
+  box-shadow: 0 0 1px #4d80e4;
+}
+
+.content input:checked + .slider:before {
+  -webkit-transform: translateX(26px);
+  -ms-transform: translateX(26px);
+  transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.content .slider.round {
+  border-radius: 34px;
+}
+
+.content .slider.round:before {
+  border-radius: 50%;
+}
+
+.notification-item-unread {
+  display: flex;
+  background-color: #efefef;
+  padding: 10px;
+  justify-content: space-between;
+}
+
+.notification-item-read {
+  display: flex;
+  background-color: #f9f9f9;
+  padding: 10px;
+  justify-content: space-between;
+}
+
+.left-side {
+}
+
+.paragraph-side p {
+  font-size: 14px;
+  color: #7e7e7e;
+}
+
+.left-side img {
+  width: 64px !important;
+  height: 64px !important;
+  margin-left: 40px;
+}
+
+/* Modal */
 .agreement-modal {
   width: 100%;
   height: 100%;
-  background-color: rgba(0,0,0, 0.8);
+  background-color: rgba(0, 0, 0, 0.8);
   position: fixed;
   top: 0;
   z-index: 2000;
@@ -160,19 +158,19 @@
 
 @media only screen and (max-width: 799px) {
   .content-register-form {
-      width: 80%;
+    width: 80%;
   }
 
   #register-image {
-      width: 80%;
+    width: 80%;
   }
 
   #date-field {
-      width: 70%;
+    width: 70%;
   }
 
   .agreement-modal-content {
-      width: 80%;
-      left: 9%;
+    width: 80%;
+    left: 9%;
   }
 }
