ubah jadi semula warna notification di notification-style.css

--- a/CSS/notification-style.css
+++ b/CSS/notification-style.css
@@ -46,7 +46,7 @@
   width: 26px;
   left: 4px;
   bottom: 4px;
-  background-color: #4d80e4;
+  background-color: white;
   -webkit-transition: 0.4s;
   transition: 0.4s;
 }
