--- a/CSS/home-style.css
+++ b/CSS/home-style.css
@@ -21,7 +21,7 @@
 }
 
 .charity-item {
-  height: 220px;
+  height: auto;
   background: #ffffff;
   border: 3px solid #4d80e4;
   box-sizing: border-box;
