--- a/CSS/bukti-pembayaran-donasi.css
+++ b/CSS/bukti-pembayaran-donasi.css
@@ -1,3 +1,10 @@
+html, main, body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  min-width: 1920px !important;
+}
+
 .border-image {
   border: 1px solid #dbdbdb;
   border-radius: 20px;
