--- a/CSS/create-penggalang-dana-style.css
+++ b/CSS/create-penggalang-dana-style.css
@@ -1,3 +1,10 @@
+html, main, body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  min-width: 1920px !important;
+}
+
 .bd-text {
   font-size: 25px;
   font-weight: 500;
