--- a/CSS/home-style.css
+++ b/CSS/home-style.css
@@ -1,3 +1,10 @@
+html, main, body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    min-width: 1920px !important;
+}
+
 .content-wrapper {
   padding: 40px 80px;
 }
