--- a/CSS/login-style.css
+++ b/CSS/login-style.css
@@ -2,6 +2,7 @@ html, main, body {
     padding: 0;
     margin: 0;
     font-family: 'Montserrat', sans-serif;
+    min-width: 1920px !important;
 }
 
 h1 {
