--- a/CSS/notification-style.css
+++ b/CSS/notification-style.css
@@ -1,3 +1,10 @@
+html, main, body {
+  padding: 0;
+  margin: 0;
+  font-family: 'Montserrat', sans-serif;
+  min-width: 1920px !important;
+}
+
 .notif-setting {
   display: flex;
   padding: 10px;
@@ -115,6 +122,20 @@
 }
 
 .agreement-modal-content {
+  height: auto;
+  width: 50%;
+  background-color: white;
+  border-radius: 20px;
+  text-align: center;
+  margin: 0 auto;
+  position: fixed;
+  top: 15%;
+  z-index: 2500;
+  left: 25%;
+  visibility: hidden;
+}
+
+.agreement-modal-content-2 {
   height: auto;
   width: 50%;
   background-color: white;
