--- a/CSS/rewards-style.css
+++ b/CSS/rewards-style.css
@@ -1,3 +1,10 @@
+html, main, body {
+    padding: 0;
+    margin: 0;
+    font-family: 'Montserrat', sans-serif;
+    min-width: 1920px !important;
+}
+
 .reward-item {
     background: #FFFFFF;
     border: 2px solid #4D80E4;
