--- a/CSS/profile-style.css
+++ b/CSS/profile-style.css
@@ -448,3 +448,9 @@ input:checked + .slider:before {
 .slider.round:before {
   border-radius: 50%;
 }
+
+@media only screen and (max-width: 1655px) {
+  .search-bar {
+    width: 30%;
+  }
+}
